--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Web portfolio</h1>
-<p>Budagyan Artyom</p>
-</body>
+  <head>
+    <title>Портфолио Будагян</title>
+  </head>
+  <body>
+    <h1>Web portfolio</h1>
+    <p>Budagyan Artyom</p>
+  </body>
 </html>
