--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Портфолио Будагян</title>
+    <title>Портфолио Будагяна А.И.</title>
   </head>
   <body>
     <h1>Web portfolio</h1>
     <p>Budagyan Artyom</p>
+    <div class="page">
+  <ul>
+    <img src="screenshot.png" alt="res">
+  </ul>
+  </div>
   </body>
 </html>
